changed button styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script type="text/javascript" src="https://static.sketchfab.com/api/sketchfab-viewer-1.9.0.js"></script>
 </head>
 <style>
@@ -21,11 +22,25 @@
         height: 500px;
     }
 
-    .btn{
+    button{
         width: 120px;
         height: 50px;
         padding: 10px;
         margin-bottom: 5px;
+        background-color: #fff;
+        border: 3px solid black;
+        font-family: 'Roboto', sans-serif;
+    }
+
+    button:hover{
+        background-color: #cc0b44;
+        color: white;
+        border: 3px solid white;
+    }
+
+    #mof{
+        margin-top: 10px;
+        width: 250px;
     }
 
     ul{
