--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
     <script type="text/javascript" src="https://static.sketchfab.com/api/sketchfab-viewer-1.9.0.js"></script>
 </head>
 <style>
+    @media only screen and (max-width: 600px) {
+        #row{
+            display: block;
+        }
+        
+        #left-panel, #api-frame{
+            width: 600px;
+            height: 300px;
+        }
+    }
+    @media only screen and (min-width: 600px) {
+        #row{
+            display: block;
+        }
+        #left-panel, #api-frame{
+            width: 600px;
+            height: 300px;
+        }
+    }
     #row{
         display: flex;
     }
